force-app/main/default/objects/Subscription__c/fields/DirectMailChannel__c.field-meta.xml
<CustomField>
    <fullName>DirectMailChannel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DirectMailChannel</label>
    <type>Checkbox</type>
</CustomField>