force-app/main/default/objects/Subscription__c/fields/EmailChannel__c.field-meta.xml
<CustomField>
    <fullName>EmailChannel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EmailChannel</label>
    <type>Checkbox</type>
</CustomField>