force-app/main/default/objects/Subscription__c/fields/MobileChannel__c.field-meta.xml
<CustomField>
    <fullName>MobileChannel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MobileChannel</label>
    <type>Checkbox</type>
</CustomField>