force-app/main/default/objects/Subscription__c/fields/SMSChannel__c.field-meta.xml
<CustomField>
    <fullName>SMSChannel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMSChannel</label>
    <type>Checkbox</type>
</CustomField>